--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Best time to visit is night due to the storm wishing illumination lights coverin
 <hr>
 <h2><b>Hawa Mahal</b></h2>
 <img scr="Hawa-Mahal.jpg" alt=Hawa Mahal" height=400 width=500>
-<p>The five-stores palace was built in the form of Krishna’s crown because Sarai Pratap Singh was devoted to Krishna, the Hindu god.
+<p>The five-stores palace was built in the form of Krishnaâ€™s crown because Sarai Pratap Singh was devoted to Krishna, the Hindu god.
 The mahal has a total of 953 small casements each with small lattice worked pink window, balconies and arched roofs with hanging cornices.
 This allows cool breeze blow through the mahal and keep it cool and airy in summer.
 The best time to visit Hawa Mahal is in the early morning when the sun enters the rooms from the windows.The mahal is illuminated with golden sun lights.<p>
@@ -26,7 +26,7 @@ The best time to visit Hawa Mahal is in the early morning when the sun enters th
 <p>The Great Stupa at Sanchi has been the focal point of the Buddhist faith in the region since it was built by Emperor Ashoka in the 3rd century BC.
 The grand structure still inspires awe today and sits at the top of a hill, surrounded by the remains of smaller stupas, monasteries, and temples that were built as the religious community grew in the centuries after the site was founded.
 Despite its impressive scale today, the original Ashokan stupa was about half the size and built from large bricks and mud mortar.
-It’s believed it had raised terraces at the base, was enclosed by a wooden railing, and was crowned by a stone umbrella<p>
+Itâ€™s believed it had raised terraces at the base, was enclosed by a wooden railing, and was crowned by a stone umbrella<p>
 </font>
 </body>
 </html>
